--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -127,15 +127,15 @@ eng:
       deposit_create: 'Add a new deposit: %{mode}'
       deposit_update: 'Edit the deposit %{number}'
       deposits: 'Deposits'
-      incoming_payment: 'Sale payment %{number} de %{entity}'
-      incoming_payment_create: 'Add a new sale payment'
-      incoming_payment_mode_create: 'Add a new sale payment mode'
+      incoming_payment: 'Incoming payment %{number} de %{entity}'
+      incoming_payment_create: 'Add a new incoming payment'
+      incoming_payment_mode_create: 'Add a new incoming payment mode'
       #>incoming_payment_mode_reflect: 'Incoming payment mode reflect'
-      incoming_payment_mode_update: 'Edit the sale payment mode: %{name}'
-      incoming_payment_modes: 'Sale payment modes'
-      incoming_payment_update: 'Edit the sale payment %{number}'
-      incoming_payment_use_create: 'Add a new sale payment: %{type} N°%{number}'
-      incoming_payments: 'Sale payments'
+      incoming_payment_mode_update: 'Edit the incoming payment mode: %{name}'
+      incoming_payment_modes: 'Incoming payment modes'
+      incoming_payment_update: 'Edit the incoming payment %{number}'
+      incoming_payment_use_create: 'Add a new incoming payment: %{type} N°%{number}'
+      incoming_payments: 'Incoming payments'
       index: 'Management'
       inventories: 'Inventories'
       inventory_create: 'Add a new inventory'
@@ -182,27 +182,27 @@ eng:
       purchase_order_update: 'Edit the purchase order: %{number}'
       purchase_orders: 'Purchase orders'
       sales_invoice: '%{nature} %{number}'
-      sales_invoice_cancel: 'Cancel sales_invoice %{number}'
-      sales_invoices: 'SalesInvoices'
-      sales_order: 'Sale order %{number}'
-      #>sales_order_confirm: 'Sales order confirm'
+      sales_invoice_cancel: 'Cancel sales invoice %{number}'
+      sales_invoices: 'Sales invoices'
+      sales_order: 'Sales order %{number}'
+      sales_order_confirm: 'Confirm estimate and go to deliveries'
       #>sales_order_contacts: 'Sales order contacts'
-      sales_order_create: 'New sale order'
+      sales_order_create: 'New sales order'
       sales_order_deliveries: 'Deliveries'
       #>sales_order_duplicate: 'Sales order duplicate'
+      sales_order_invoice: 'Invoice sales order'
       sales_order_line_create: 'Add a new line of product'
       #>sales_order_line_detail: 'Sales order line detail'
       #>sales_order_line_informations: 'Sales order line informations'
       #>sales_order_line_stocks: 'Sales order line stocks'
       #>sales_order_line_tracking: 'Sales order line tracking'
-      sales_order_line_update: 'Edit sale order line'
+      sales_order_line_update: 'Edit sales order line'
       sales_order_lines: 'Selection of the products for the estimate %{sales_order}'
       sales_order_nature_create: 'Add a new type of sale'
-      sales_order_nature_update: 'Edit the sale order type: %{name}'
-      sales_order_natures: 'Sale order types'
-      #>sales_order_sales_invoice: 'Sales order sales invoice'
-      sales_order_summary: 'SalesInvoice and payments of the sale order %{number}'
-      sales_order_update: 'Edit the sale order %{number}'
+      sales_order_nature_update: 'Edit the sales order type: %{name}'
+      sales_order_natures: 'Sales order types'
+      sales_order_summary: 'Sales invoice and incoming payments of the sales order %{number}'
+      sales_order_update: 'Edit the sales order %{number}'
       sales_orders: 'Estimates and orders'
       #>self.sales_invoices_conditions: 'Self.sales invoices conditions'
       #>self.sales_orders_conditions: 'Self.sales orders conditions'
@@ -416,7 +416,7 @@ eng:
     are_you_sure_you_want_to_confirm: 'Are you sure you want to order'
     are_you_sure_you_want_to_delete: 'Are you sure you want to delete this record?'
     are_you_sure_you_want_to_delete_delivery: 'Are you sure you want to remove the delivery of transport?'
-    are_you_sure_you_want_to_sales_invoice: 'Are you sure you want to sales_invoice?'
+    are_you_sure_you_want_to_sales_invoice: 'Are you sure you want to sales invoice?'
     are_you_sure_you_want_to_send_mails: 'Are you sure you want to send emails?'
     area_x: '%{name} (%{postcode})'
     assessable_operations: 'Assessable operations (without tax)'
@@ -574,7 +574,7 @@ eng:
     entries: 'Entries'
     entries_to_point: 'Entries pointing to'
     error_no_file: 'No help is available for this part of the application (%{article}). Help has not yet been written. You can visit online website for more information.'
-    error_sales_order_already_paid: 'The sale order is already paid'
+    error_sales_order_already_paid: 'The sales order is already paid'
     errors_explanation: 'There are errors in the file. If you do not correct them, the incorrect lines will be ignored during the import.'
     establish_capital_goods: 'Established Capital Goods'
     establishment: 'Establishment'
@@ -631,9 +631,9 @@ eng:
     include_blank: 'Include blank'
     income_statement: 'Income Statement'
     incoming_payment_conditions: 'Conditions of payment'
-    incoming_payment_update: 'Update sale payment'
-    incoming_payment_use_create: 'Add a new sale payment'
-    incoming_payments: 'Sale payments'
+    incoming_payment_update: 'Update incoming payment'
+    incoming_payment_use_create: 'Add a new incoming payment'
+    incoming_payments: 'Incoming payments'
     incoming_payments_states:
       all: 'All'
       undeposited: 'Undeposited'
@@ -651,7 +651,7 @@ eng:
     interval: 'Personalized Interval'
     inventory: 'Inventory'
     inventory_print: 'Print inventory'
-    invoiced_amount: 'SalesInvoiced amount'
+    invoiced_amount: 'Sales invoiced amount'
     is: 'Is'
     journal: 'Journal'
     journal_detail: 'Closing on %{closed_on}'
@@ -768,9 +768,9 @@ eng:
       other: '%{count} operation performed'
       zero: 'No operation performed'
     nb_payments:
-      one: '1 sale payment to deposit'
-      other: '%{count} sale payments to deposit'
-      zero: 'No sale payments to deposit'
+      one: '1 incoming payment to deposit'
+      other: '%{count} incoming payments to deposit'
+      zero: 'No incoming payments to deposit'
     nb_products:
       one: 'One product'
       other: '%{count} products'
@@ -784,9 +784,9 @@ eng:
       other: '%{count} sales'
       zero: 'No sales'
     nb_sales_invoices:
-      one: '1 sales_invoice'
-      other: '%{count} sales_invoices'
-      zero: '0 sales_invoices'
+      one: '1 sales invoice'
+      other: '%{count} sales invoices'
+      zero: '0 sales invoices'
     nb_transfers:
       one: 'One transfert to make'
       other: '%{count} transferts to make'
@@ -810,7 +810,7 @@ eng:
     no_commercial: 'No commercial'
     no_contacts: 'No address defined for %{name}'
     no_deliveries: 'No deliveries'
-    no_deliveries_for_this_sales_order: 'No deliveries for this sale order'
+    no_deliveries_for_this_sales_order: 'No deliveries for this sales order'
     no_deposits: 'No deposits'
     no_filters: '--- No filters ---'
     no_javascript: 'Your web browser don''t support javascript. You need to activate it in order to use Ekylibre.'
@@ -977,28 +977,26 @@ eng:
       estimate: 'Estimate'
       general: 'General'
       products: 'Products'
-      summary: 'SalesInvoice and payments'
+      summary: 'Sales invoice and incoming payments'
     sales_invoice: 'Invoicing'
-    sales_invoice_cancel: 'Cancel sales_invoice'
-    sales_invoice_lines: 'SalesInvoice lines'
-    sales_invoice_number: 'SalesInvoice'
-    sales_invoice_print: 'Print sales_invoice'
-    sales_invoice_sales_order: 'SalesInvoice sale order'
-    sales_invoices: 'SalesInvoices'
+    sales_invoice_cancel: 'Cancel sales invoice'
+    sales_invoice_lines: 'Sales invoice lines'
+    sales_invoice_number: 'Sales invoice'
+    sales_invoice_print: 'Print sales invoice'
+    sales_invoice_sales_order: 'Sales invoice sales order'
+    sales_invoices: 'Sales invoices'
     sales_invoices_states:
       all: 'All'
       cancelled: 'Cancelled'
       credits: 'Credits'
-    sales_invoices_total: 'SalesInvoices total'
-    sales_order: 'Sale order'
-    sales_order_confirm: 'Confirm estimate and go to deliveries'
+    sales_invoices_total: 'Sales invoices total'
+    sales_order: 'Sales order'
     sales_order_deliveries: 'Deliveries'
     sales_order_line_create: 'Add a product to estimate (Full mode)'
-    sales_order_lines: 'Edit sale order'
+    sales_order_lines: 'Edit sales order'
     sales_order_price_create: 'Add a new sale price'
-    sales_order_sales_invoice: 'Sale order sales_invoice'
-    sales_order_update: 'Update sale order'
-    sales_orders: 'Sale orders'
+    sales_order_update: 'Update sales order'
+    sales_orders: 'Sales orders'
     sales_orders_states:
       all: 'All'
       current: 'Current'
@@ -1087,8 +1085,8 @@ eng:
     unpaid: 'Unpaid'
     unpaid_amount: 'Unpaid amount'
     unpaid_days: 'Unpaid since (in days)'
-    unpaid_sales_orders: 'Unpaid sale order'
-    unpaid_sales_orders_export: 'Export unpaid sale orders in CSV'
+    unpaid_sales_orders: 'Unpaid sales order'
+    unpaid_sales_orders_export: 'Export unpaid sales orders in CSV'
     unparted: 'Unparted'
     unreceived: 'Unreceived'
     unused_payment: 'Unused payment'
@@ -1120,7 +1118,7 @@ eng:
       stocks: 'Stocks'
     warehouses: 'Warehouses'
     weight: 'Weight'
-    with_prints: 'Include printing archives (sales_invoices, purchase orders...)'
+    with_prints: 'Include printing archives (sales invoices, purchase orders...)'
     x_events:
       one: '1 event'
       other: '%{count} events'
@@ -1130,9 +1128,9 @@ eng:
       other: '%{count} events %{nature} for a total duration of %{duration} minutes'
       zero: 'No events %{nature}'
     x_incoming_payments:
-      one: '%{count} sale payment'
-      other: '%{count} sale payments'
-      zero: '0 sale payments'
+      one: '%{count} incoming payment'
+      other: '%{count} incoming payments'
+      zero: '0 incoming payments'
     x_operations:
       one: '1 operation'
       other: '%{count} operations'
@@ -1146,13 +1144,13 @@ eng:
       other: '%{count} purchase orders'
       zero: '0 purchase orders'
     x_sales_invoices:
-      one: '1 sales_invoice'
-      other: '%{count} sales_invoices'
-      zero: '0 sales_invoices'
+      one: '1 sales invoice'
+      other: '%{count} sales invoices'
+      zero: '0 sales invoices'
     x_sales_orders:
-      one: '1 sale order'
-      other: '%{count} sale orders'
-      zero: '0 sale orders'
+      one: '1 sales order'
+      other: '%{count} sales orders'
+      zero: '0 sales orders'
     x_subscriptions:
       one: '1 subscription'
       other: '%{count} subscriptions'
@@ -1200,7 +1198,7 @@ eng:
     need_entries_to_point: 'No entry was found for the period of the bank statement.'
     need_journal_to_record_tax_declaration: 'You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns.'
     need_payment_mode_to_create_deposit: 'You must specify a mode of payment in order to make deposits'
-    need_quantities_to_cancel_an_sales_invoice: 'You must specify a quantity in order to cancel the sales_invoice'
+    need_quantities_to_cancel_an_sales_invoice: 'You must specify a quantity in order to cancel the sales invoice'
     need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
     need_stocks_warehouse_to_create_products: 'You must create a warehouse to be able to create a product'
     need_to_create_subscription_nature: 'You must create a type of subscription to manage your subscriptions'
@@ -1232,7 +1230,7 @@ eng:
     restoration_finished: 'Restoring the backup has completed (in %{value} seconds). Your company ID is %{code}'
     sales_order_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     sales_order_cannot_be_updated: 'The estimate is no longer editable.'
-    sales_order_cant_be_deleted: 'The sale order can not be deleted.'
+    sales_order_cant_be_deleted: 'The sales order can not be deleted.'
     select_entries_to_letter_together: 'Select entries in order to letter them together'
     specify_filter: 'You must choose at least one search filter'
     specify_updates: 'You must specify at least one field to edit'
@@ -1292,13 +1290,13 @@ eng:
         days_before_warning_unvalidated: 'Number of days before warning for receipts not validated'
         numeration: 'Numeration of deposits'
       incoming_payments:
-        numeration: 'Numeration of sale payments'
+        numeration: 'Numeration of incoming payments'
       outgoing_payments:
         numeration: 'Numeration of disbursements'
       purchase_orders:
         numeration: 'Numeration of purchases'
       sales_invoices:
-        numeration: 'Numeration of sales_invoices'
+        numeration: 'Numeration of sales invoices'
       sales_orders:
         numeration: 'Numeration of sales'
       subscriptions:
