--- a/config/locales/eng/rights.yml
+++ b/config/locales/eng/rights.yml
@@ -15,8 +15,8 @@ eng:
     consult_prices: 'Consult the prices'
     consult_products: 'Consult the products'
     consult_purchase_orders: 'Consult the purchases'
+    consult_sales_invoices: 'Consult the sales_invoices'
     consult_sales_orders: 'Consult the sales'
-    consult_sales_sales_invoices: 'Consult the sales_invoices'
     consult_stocks: 'Consult the stocks'
     consult_trackings: 'Consult the tracking informations'
     extract_listings: 'Export listings'
