--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -157,8 +157,10 @@ fra:
       sales_invoice_cancel: 'Passage en avoir de la facture %{number}'
       sales_invoices: 'Factures'
       sales_order: 'Détails de la vente %{number} au client %{client}'
+      sales_order_confirm: 'Passer le devis en commande et aller aux livraisons'
       sales_order_create: 'Nouvelle vente'
       sales_order_deliveries: 'Livraisons'
+      sales_order_invoice: 'Facturer directement tout le devis'
       sales_order_line_create: 'Ajout d''une ligne de produit'
       sales_order_line_update: 'Modifier une ligne de produit'
       sales_order_lines: 'Sélection des produits pour le devis %{sales_order} de : %{client}'
@@ -933,12 +935,10 @@ fra:
       credits: 'Avoirs'
     sales_invoices_total: 'Total factures'
     sales_order: 'Vente'
-    sales_order_confirm: 'Passer le devis en commande et aller aux livraisons'
     sales_order_deliveries: 'Livraisons'
     sales_order_line_create: 'Ajouter un produit au devis (Mode complet)'
     sales_order_lines: 'Lignes de la vente'
     sales_order_price_create: 'Ajouter un prix de vente'
-    sales_order_sales_invoice: 'Facturer directement tout le devis'
     sales_order_update: 'Modifier les informations du devis'
     sales_orders: 'Ventes'
     sales_orders_states:
