--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -110,14 +110,14 @@ spa:
       deposit_create: 'Crear un aposto : %{mode}'
       deposit_update: 'Modificacion del aposto en banco del %{created_on}'
       deposits: 'Aposto en banco'
-      #>incoming_payment: 'Sale payment %{number} de %{entity}'
-      #>incoming_payment_create: 'Add a new sale payment'
-      #>incoming_payment_mode_create: 'Add a new sale payment mode'
-      #>incoming_payment_mode_update: 'Edit the sale payment mode: %{name}'
-      #>incoming_payment_modes: 'Sale payment modes'
-      #>incoming_payment_update: 'Edit the sale payment %{number}'
-      #>incoming_payment_use_create: 'Add a new sale payment: %{type} N°%{number}'
-      #>incoming_payments: 'Sale payments'
+      #>incoming_payment: 'Incoming payment %{number} de %{entity}'
+      #>incoming_payment_create: 'Add a new incoming payment'
+      #>incoming_payment_mode_create: 'Add a new incoming payment mode'
+      #>incoming_payment_mode_update: 'Edit the incoming payment mode: %{name}'
+      #>incoming_payment_modes: 'Incoming payment modes'
+      #>incoming_payment_update: 'Edit the incoming payment %{number}'
+      #>incoming_payment_use_create: 'Add a new incoming payment: %{type} N°%{number}'
+      #>incoming_payments: 'Incoming payments'
       index: 'Administracion commercial'
       inventories: 'Inventarios'
       inventory_create: 'Inventario'
@@ -160,17 +160,19 @@ spa:
       sales_invoice: '%{nature} %{number}'
       sales_invoice_cancel: 'Paso en activo de la factura %{number}'
       sales_invoices: 'Facturas'
-      #>sales_order: 'Sale order %{number}'
-      #>sales_order_create: 'New sale order'
+      #>sales_order: 'Sales order %{number}'
+      #>sales_order_confirm: 'Confirm estimate and go to deliveries'
+      #>sales_order_create: 'New sales order'
       #>sales_order_deliveries: 'Deliveries'
+      #>sales_order_invoice: 'Invoice sales order'
       #>sales_order_line_create: 'Add a new line of product'
-      #>sales_order_line_update: 'Edit sale order line'
+      #>sales_order_line_update: 'Edit sales order line'
       #>sales_order_lines: 'Selection of the products for the estimate %{sales_order}'
       #>sales_order_nature_create: 'Add a new type of sale'
-      #>sales_order_nature_update: 'Edit the sale order type: %{name}'
-      #>sales_order_natures: 'Sale order types'
-      #>sales_order_summary: 'SalesInvoice and payments of the sale order %{number}'
-      #>sales_order_update: 'Edit the sale order %{number}'
+      #>sales_order_nature_update: 'Edit the sales order type: %{name}'
+      #>sales_order_natures: 'Sales order types'
+      #>sales_order_summary: 'Sales invoice and incoming payments of the sales order %{number}'
+      #>sales_order_update: 'Edit the sales order %{number}'
       #>sales_orders: 'Estimates and orders'
       #>statistics: 'Statistics'
       #>stock_move_create: 'add a new stock move'
@@ -356,7 +358,7 @@ spa:
     #>are_you_sure_you_want_to_confirm: 'Are you sure you want to order'
     #>are_you_sure_you_want_to_delete: 'Are you sure you want to delete this record?'
     #>are_you_sure_you_want_to_delete_delivery: 'Are you sure you want to remove the delivery of transport?'
-    #>are_you_sure_you_want_to_sales_invoice: 'Are you sure you want to sales_invoice?'
+    #>are_you_sure_you_want_to_sales_invoice: 'Are you sure you want to sales invoice?'
     are_you_sure_you_want_to_send_mails: 'Esta seguro querer enviar este correo electronico?'''
     #>area_x: '%{name} (%{postcode})'
     assessable_operations: 'Operaciones imponibles (H.T)'
@@ -520,7 +522,7 @@ spa:
     entries: 'Escrituras'
     entries_to_point: 'Escrituras a despuntar'
     error_no_file: 'Ninguna atyuda esta disponible para ese partido del software (%{article}). La ayuda ya no ha sido escribida. Se puede consultar el sitio en linea para mas informaciones.'
-    #>error_sales_order_already_paid: 'The sale order is already paid'
+    #>error_sales_order_already_paid: 'The sales order is already paid'
     #>errors_explanation: 'There are errors in the file. If you do not correct them, the incorrect lines will be ignored during the import.'
     establish_capital_goods: 'Bienes que  constituyen inmobilizaciones'
     establishment: 'Establecimiento'
@@ -579,9 +581,9 @@ spa:
     #>include_blank: 'Include blank'
     income_statement: 'cuentos de résultos'
     #>incoming_payment_conditions: 'Conditions of payment'
-    #>incoming_payment_update: 'Update sale payment'
-    #>incoming_payment_use_create: 'Add a new sale payment'
-    #>incoming_payments: 'Sale payments'
+    #>incoming_payment_update: 'Update incoming payment'
+    #>incoming_payment_use_create: 'Add a new incoming payment'
+    #>incoming_payments: 'Incoming payments'
     incoming_payments_states:
       #>all: 'All'
       #>undeposited: 'Undeposited'
@@ -600,7 +602,7 @@ spa:
     inventory: 'Completar el inventario'
     inventory_create: 'Hacer un nuevo inventario' #!
     inventory_print: 'Imprimir el inventario'
-    #>invoiced_amount: 'SalesInvoiced amount'
+    #>invoiced_amount: 'Sales invoiced amount'
     #>is: 'Is'
     journal: 'Periodico'
     journal_detail: 'Cerrado al %{fecha de cerrado}'
@@ -723,9 +725,9 @@ spa:
       #>other: '%{count} operation performed'
       #>zero: 'No operation performed'
     nb_payments:
-      #>one: '1 sale payment to deposit'
-      #>other: '%{count} sale payments to deposit'
-      #>zero: 'No sale payments to deposit'
+      #>one: '1 incoming payment to deposit'
+      #>other: '%{count} incoming payments to deposit'
+      #>zero: 'No incoming payments to deposit'
     nb_products:
       #>one: 'One product'
       #>other: '%{count} products'
@@ -739,9 +741,9 @@ spa:
       other: '%{count} encargos'
       zero: 'Ningun encargo'
     nb_sales_invoices:
-      #>one: '1 sales_invoice'
-      #>other: '%{count} sales_invoices'
-      #>zero: '0 sales_invoices'
+      #>one: '1 sales invoice'
+      #>other: '%{count} sales invoices'
+      #>zero: '0 sales invoices'
     nb_transfers:
       #>one: 'One transfert to make'
       #>other: '%{count} transferts to make'
@@ -765,7 +767,7 @@ spa:
     #>no_commercial: 'No commercial'
     #>no_contacts: 'No address defined for %{name}'
     #>no_deliveries: 'No deliveries'
-    #>no_deliveries_for_this_sales_order: 'No deliveries for this sale order'
+    #>no_deliveries_for_this_sales_order: 'No deliveries for this sales order'
     #>no_deposits: 'No deposits'
     #>no_filters: '--- No filters ---'
     no_javascript: 'Su navegante no soporta el javascript. se debe activarlo para utilizar el software. Gracias para su comprension.'
@@ -941,24 +943,22 @@ spa:
     sales_invoice: 'Facturas'
     sales_invoice_cancel: 'Hacer un activo sobre une factura'
     sales_invoice_lines: 'Lineas de factura'
-    #>sales_invoice_number: 'SalesInvoice'
+    #>sales_invoice_number: 'Sales invoice'
     sales_invoice_print: 'Imprimir la factura'
-    #>sales_invoice_sales_order: 'SalesInvoice sale order'
-    #>sales_invoices: 'SalesInvoices'
+    #>sales_invoice_sales_order: 'Sales invoice sales order'
+    #>sales_invoices: 'Sales invoices'
     sales_invoices_states:
       #>all: 'All'
       #>cancelled: 'Cancelled'
       #>credits: 'Credits'
-    #>sales_invoices_total: 'SalesInvoices total'
+    #>sales_invoices_total: 'Sales invoices total'
     sales_order: 'Encargos'
-    #>sales_order_confirm: 'Confirm estimate and go to deliveries'
     #>sales_order_deliveries: 'Deliveries'
     #>sales_order_line_create: 'Add a product to estimate (Full mode)'
-    #>sales_order_lines: 'Edit sale order'
+    #>sales_order_lines: 'Edit sales order'
     #>sales_order_price_create: 'Add a new sale price'
-    #>sales_order_sales_invoice: 'Sale order sales_invoice'
-    #>sales_order_update: 'Update sale order'
-    #>sales_orders: 'Sale orders'
+    #>sales_order_update: 'Update sales order'
+    #>sales_orders: 'Sales orders'
     sales_orders_number:
     sales_orders_states:
       #>all: 'All'
@@ -1054,8 +1054,8 @@ spa:
     #>unpaid: 'Unpaid'
     #>unpaid_amount: 'Unpaid amount'
     #>unpaid_days: 'Unpaid since (in days)'
-    #>unpaid_sales_orders: 'Unpaid sale order'
-    #>unpaid_sales_orders_export: 'Export unpaid sale orders in CSV'
+    #>unpaid_sales_orders: 'Unpaid sales order'
+    #>unpaid_sales_orders_export: 'Export unpaid sales orders in CSV'
     #>unparted: 'Unparted'
     #>unreceived: 'Unreceived'
     #>unused_payment: 'Unused payment'
@@ -1101,9 +1101,9 @@ spa:
       #>other: '%{count} events %{nature} for a total duration of %{duration} minutes'
       #>zero: 'No events %{nature}'
     x_incoming_payments:
-      #>one: '%{count} sale payment'
-      #>other: '%{count} sale payments'
-      #>zero: '0 sale payments'
+      #>one: '%{count} incoming payment'
+      #>other: '%{count} incoming payments'
+      #>zero: '0 incoming payments'
     x_operations:
       #>one: '1 operation'
       #>other: '%{count} operations'
@@ -1117,13 +1117,13 @@ spa:
       #>other: '%{count} purchase orders'
       #>zero: '0 purchase orders'
     x_sales_invoices:
-      #>one: '1 sales_invoice'
-      #>other: '%{count} sales_invoices'
-      #>zero: '0 sales_invoices'
+      #>one: '1 sales invoice'
+      #>other: '%{count} sales invoices'
+      #>zero: '0 sales invoices'
     x_sales_orders:
-      #>one: '1 sale order'
-      #>other: '%{count} sale orders'
-      #>zero: '0 sale orders'
+      #>one: '1 sales order'
+      #>other: '%{count} sales orders'
+      #>zero: '0 sales orders'
     x_subscriptions:
       #>one: '1 subscription'
       #>other: '%{count} subscriptions'
@@ -1273,14 +1273,14 @@ spa:
         #>days_before_warning_unvalidated: 'Number of days before warning for receipts not validated'
         #>numeration: 'Numeration of deposits'
       incoming_payments:
-        #>numeration: 'Numeration of sale payments'
+        #>numeration: 'Numeration of incoming payments'
       outgoing_payments:
         #>numeration: 'Numeration of disbursements'
       payments:
       purchase_orders:
         #>numeration: 'Numeration of purchases'
       sales_invoices:
-        #>numeration: 'Numeration of sales_invoices'
+        #>numeration: 'Numeration of sales invoices'
       sales_orders:
         #>numeration: 'Numeration of sales'
       subscriptions:
