--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -14,8 +14,8 @@ arb:
     consult_prices: 'مراجعة الاسعار'
     consult_products: 'مراجعة المنتجات'
     consult_purchase_orders: 'مراجعة المشتريات'
+    consult_sales_invoices: 'مراجعة الفواتير'
     consult_sales_orders: 'مراجعة المبيعات'
-    consult_sales_sales_invoices: 'مراجعة الفواتير'
     consult_stocks: 'مراجعة حالة الاسهم'
     consult_trackings: 'مراجعة المعلومات التتابعية'
     extract_listings: '(تنفيذ الاستخراج (دون القدرة على التصور'
